ci: WIP